<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AddAlumnoActivity">

    <EditText
        android:id="@+id/txtNombreAddAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtApellidoAddAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/spCicloAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/sp_ciclos" />

    <RadioGroup
        android:id="@+id/rgGrupoAddAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/rbGrupoAAddAlumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grupo_a" />

        <RadioButton
            android:id="@+id/rbGrupoBAddAlumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grupo_B" />

        <RadioButton
            android:id="@+id/rbGRupoCAddAlumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grupo_c" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelarAddAluymno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/btnCrearAddAlumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/crear" />
    </LinearLayout>
</LinearLayout>